chore: add custom field to plan settings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
 
     <string name="twenty_vaults">20 vaults</string>
     <string name="unlimited_email_alias">Unlimited email aliases</string>
+    <string name="custom_fields">Custom fields</string>
 </resources>
