--- a/pass/feature-account/impl/src/main/res/values/strings.xml
+++ b/pass/feature-account/impl/src/main/res/values/strings.xml
@@ -5,12 +5,12 @@
     <string name="account_subscription_label">Subscription plan</string>
     <string name="account_permanently_delete_warning">This will permanently delete your account and all of its data. You will not be able to reactivate this account.</string>
     <string name="account_delete_account">Delete account</string>
-    <string name="account_delete_account_icon_content_description">Delete account icon</string>
+    <string name="account_delete_account_icon_content_description">Delete account button</string>
     <string name="account_sign_out">Sign out</string>
-    <string name="account_sign_out_icon_content_description">Sign out icon</string>
+    <string name="account_sign_out_icon_content_description">Sign out button</string>
     <string name="account_manage_subscription">Manage subscription</string>
     <string name="account_get_user_info_error">Could not retrieve the user information</string>
-    <string name="manage_subscription_icon_content_description">Manage subscription icon</string>
+    <string name="manage_subscription_icon_content_description">Manage subscription button</string>
 
     <!-- Sign out dialog -->
     <string name="alert_confirm_sign_out_title">Sign out?</string>
