feat(item-detail): add support for credit card

--- a/pass/feature-item-detail/impl/src/main/res/values/strings.xml
+++ b/pass/feature-item-detail/impl/src/main/res/values/strings.xml
@@ -38,6 +38,8 @@
 
     <string name="action_reveal_password">Reveal password</string>
     <string name="action_conceal_password">Conceal password</string>
+    <string name="action_reveal_number">Reveal number</string>
+    <string name="action_conceal_number">Conceal number</string>
 
     <string name="more_info_created">Created:</string>
     <string name="more_info_modified">Modified:</string>
@@ -58,6 +60,15 @@
     <string name="custom_field_text_icon_description">Text custom field</string>
     <string name="custom_field_hidden_icon_description">Hidden custom field</string>
     <string name="custom_field_totp_icon_description">2FA custom field</string>
+
+    <!-- Credit card details -->
+    <string name="credit_card_cardholder_field_name">Cardholder name</string>
+    <string name="credit_card_number_field_name">Card number</string>
+    <string name="credit_card_cvv_field_name">Verification number</string>
+    <string name="credit_card_expiration_date_field_name">Expires on</string>
+    <string name="credit_card_cardholder_copied_to_clipboard">Cardholder copied to clipboard</string>
+    <string name="credit_card_number_copied_to_clipboard">Card number copied to clipboard</string>
+    <string name="credit_card_verifcation_number_copied_to_clipboard">Verification number copied to clipboard</string>
 
     <!-- Bottomsheet -->
     <string name="move_to_trash_item_detail_bottom_sheet">Move to trash</string>
