--- a/pass/feature-item-create/impl/src/main/res/values/strings.xml
+++ b/pass/feature-item-create/impl/src/main/res/values/strings.xml
@@ -101,6 +101,8 @@
     <string name="field_card_number_hint">1234 1234 1234 1234</string>
     <string name="field_card_cvv_title">Verification number</string>
     <string name="field_card_cvv_hint">Add password</string>
+    <string name="field_card_pin_title">PIN number</string>
+    <string name="field_card_pin_hint">Add PIN</string>
     <string name="field_card_expiration_date_title">Expires on</string>
     <string name="field_card_expiration_date_hint">MM / YYYY</string>
     <string name="field_card_expiration_date_error">The expiration date is not valid</string>
