--- a/pass/feature-profile/impl/src/main/res/values/strings.xml
+++ b/pass/feature-profile/impl/src/main/res/values/strings.xml
@@ -11,9 +11,9 @@
     <string name="profile_option_rating">Rate app</string>
     <string name="profile_option_autofill">Autofill</string>
     <string name="profile_option_autofill_subtitle">Automatically fill in your usernames and passwords.</string>
-    <string name="profile_option_fingerprint_subtitle">Unlock Proton Pass with a touch.</string>
     <string name="profile_option_fingerprint">Fingerprint</string>
-    <string name="profile_option_app_lock">App lock</string>
+    <string name="profile_option_automatic_app_lock">Automatic app locking</string>
+    <string name="profile_option_advanced">Advanced</string>
 
     <string name="profile_error_biometry_failed_to_start">Could not start the biometric authentication</string>
     <string name="profile_error_biometry_failed_to_authenticate">Failed to authenticate</string>
@@ -34,5 +34,10 @@
     <string name="app_lock_four_hours">After 4 hours</string>
 
     <string name="profile_account_plan_name_trial">Free Trial</string>
+    <string name="app_lock_config_biometric">Biometric</string>
+    <string name="app_lock_config_pin_code">PIN code</string>
+    <string name="app_lock_config_unlock_with">Unlock with</string>
+    <string name="app_lock_config_app_lock_time">App lock time</string>
+    <string name="app_lock_config_use_system_lock_when_biometric_fails">Use system lock when biometric fails</string>
 
 </resources>
