--- a/pass/feature-profile/impl/src/main/res/values/strings.xml
+++ b/pass/feature-profile/impl/src/main/res/values/strings.xml
@@ -4,8 +4,8 @@
 
     <string name="profile_option_settings">Settings</string>
     <string name="profile_option_account">Account</string>
-    <string name="profile_manage_profile">Manage my profile</string>
     <string name="profile_help_center">Help center</string>
+    <string name="profile_security">Security</string>
     <string name="profile_option_feedback">Feedback</string>
     <string name="profile_option_import_export">Import/export</string>
     <string name="profile_option_rating">Rate app</string>
