feat: support system app lock preference

--- a/pass/biometry/impl/src/main/res/values/strings.xml
+++ b/pass/biometry/impl/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="biometric_prompt_title">App locked</string>
     <string name="biometric_prompt_subtitle">Unlock using your device lock</string>
+    <string name="biometric_prompt_cancel">Cancel</string>
 </resources>
