--- a/pass/feature-auth/impl/src/main/res/values/strings.xml
+++ b/pass/feature-auth/impl/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
   ~ Copyright (c) 2023 Proton AG
   ~ This file is part of Proton AG and Proton Pass.
   ~
@@ -29,4 +30,16 @@
         <item quantity="other">Incorrect PIN. %d attempts remaining.</item>
     </plurals>
 
+
+    <string name="auth_unlock_app_title">Unlock Proton Pass</string>
+    <string name="auth_unlock_app_subtitle">Enter the master password for %s</string>
+    <string name="auth_master_password_label">Master password</string>
+    <string name="auth_action_reveal_password">Reveal master password</string>
+    <string name="auth_action_conceal_password">Conceal master password</string>
+    <string name="auth_unlock_button">Unlock</string>
+    <string name="auth_error_verifying_password">Error verifying your password</string>
+    <plurals name="auth_error_wrong_password">
+        <item quantity="one">Incorrect password. %d attempt remaining</item>
+        <item quantity="other">Incorrect password. %d attempts remaining</item>
+    </plurals>
 </resources>
