--- a/pass/feature-sharing/impl/src/main/res/values/strings.xml
+++ b/pass/feature-sharing/impl/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
 
     <string name="share_with_title">Share with</string>
     <string name="share_with_subtitle">This user will receive an invitation to join your \'%s\' vault.</string>
-    <string name="share_with_email_hint">Proton email address</string>
+    <string name="share_with_email_hint">Email address</string>
     <string name="share_with_email_error">Invalid email address</string>
 
     <string name="share_permissions_title">Set permissions</string>
