--- a/pass/feature-sharing/impl/src/main/res/values/strings.xml
+++ b/pass/feature-sharing/impl/src/main/res/values/strings.xml
@@ -53,6 +53,7 @@
     <string name="sharing_snackbar_vault_not_found">Vault could not be found</string>
     <string name="sharing_snackbar_invite_sent_success">Invitation sent</string>
     <string name="sharing_snackbar_invite_sent_error">Could not send invite</string>
+    <string name="sharing_snackbar_get_vault_members_error">Could not get vault members</string>
 
     <string name="share_summary_title">Summary</string>
     <string name="share_summary_subtitle">You are about to invite %1$s into your %2$s. They will gain access to %3$s and they will be able to %4$s in this vault.</string>
@@ -64,5 +65,12 @@
     <string name="share_summary_email_title">User</string>
     <string name="share_summary_vault_title">Vault</string>
     <string name="share_summary_permissions_title">Permissions</string>
+
+    <string name="share_manage_vault_share_with_more_people">Share with more people</string>
+    <string name="share_manage_vault_item_count">%d items</string>
+    <string name="share_manage_vault_invite_pending">Pending invite</string>
+    <string name="share_role_can_view">Can view</string>
+    <string name="share_role_can_edit">Can edit</string>
+    <string name="share_role_admin">Admin</string>
 
 </resources>
