--- a/pass/feature-auth/impl/src/main/res/values/strings.xml
+++ b/pass/feature-auth/impl/src/main/res/values/strings.xml
@@ -36,6 +36,8 @@
     <string name="auth_master_password_label">Master password</string>
     <string name="auth_action_reveal_password">Reveal master password</string>
     <string name="auth_action_conceal_password">Conceal master password</string>
+    <string name="auth_action_enter_pin_instead" comment="This text shows under the Master password input, in case the user dismissed the PIN input">Enter PIN instead</string>
+    <string name="auth_action_enter_fingerprint_instead" comment="This text shows under the Master password input, in case the user dismissed the PIN input">Enter fingerprint instead</string>
     <string name="auth_unlock_button">Unlock</string>
     <string name="auth_error_verifying_password">Error verifying your password</string>
     <string name="auth_error_empty_password">Password cannot be empty</string>
