--- a/pass/feature-home/impl/src/main/res/values/strings.xml
+++ b/pass/feature-home/impl/src/main/res/values/strings.xml
@@ -9,8 +9,14 @@
     <string name="home_empty_vault_create_alias">Create a Hide My Email alias</string>
     <string name="home_empty_vault_create_note">Create a note</string>
 
-    <string name="error_observing_items">Error observing items</string>
-    <string name="error_observing_share">Error observing share</string>
+    <string
+        name="error_observing_items"
+        comment="Error message shown whenever there is an error loading the items"
+    >Error loading items</string>
+    <string
+        name="error_observing_share"
+        comment="Error message shown whenever there is an error loading the vault"
+    >Error loading vault</string>
     <string name="error_refreshing">Error performing refresh</string>
 
     <string name="home_snackbar_login_moved_to_trash">Login moved to trash</string>
