--- a/pass/feature-item-create/impl/src/main/res/values/strings.xml
+++ b/pass/feature-item-create/impl/src/main/res/values/strings.xml
@@ -11,11 +11,27 @@
     <string name="action_note">Note</string>
     <string name="action_credit_card">Credit card</string>
     <string name="action_password">Password</string>
-    <string name="item_type_login_description">Add login details for an app or site</string>
-    <string name="item_type_alias_description">Get an email alias to use on new apps</string>
-    <string name="item_type_note_description">Jot down a PIN, code, or note to self</string>
-    <string name="item_type_credit_card_description">Securely store your payment information</string>
-    <string name="item_type_password_description">Generate a secure password</string>
+    <string
+        name="item_type_login_description"
+        comment="Subtitle of the Item Type LOGIN in the Create new item bottomsheet"
+    >Add login details for an app or site</string>
+    <string
+        name="item_type_alias_description"
+        comment="Subtitle of the Item Type ALIAS in the Create new item bottomsheet"
+    >Get an email alias to use on new apps</string>
+    <string
+        name="item_type_note_description"
+        comment="Subtitle of the Item Type NOTE in the Create new item bottomsheet"
+    >Jot down a PIN, code, or note to self</string>
+    <string
+        name="item_type_credit_card_description"
+        comment="Subtitle of the Item Type CREDIT CARD in the Create new item bottomsheet"
+    >Securely store your payment information</string>
+
+    <string
+        name="item_type_password_description"
+        comment="Subtitle of the Item Type PASSWORD in the Create new item bottomsheet"
+    >Generate a secure password</string>
 
     <!-- Create Login -->
     <string name="title_create_login">Create login</string>
