--- a/pass/feature-settings/impl/src/main/res/values/strings.xml
+++ b/pass/feature-settings/impl/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
 
     <string name="settings_authentication_section_title">Authentication</string>
     <string name="settings_authentication_preference_title">Fingerprint unlock</string>
-    <string name="settings_authentication_preference_description_enabled">Require Quickly and securely open the app with your fingerprint.</string>
+    <string name="settings_authentication_preference_description_enabled">Quickly and securely open the app with your fingerprint.</string>
     <string name="settings_authentication_preference_description_no_fingerprint">You cannot require your fingerprint for interacting with the app as there are no fingerprints registered on this device.</string>
 
     <string name="settings_appearance_preference_title">Theme</string>
