--- a/pass/feature-home/impl/src/main/res/values/strings.xml
+++ b/pass/feature-home/impl/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="home_empty_vault_title">Your vault is empty</string>
     <string name="home_empty_vault_subtitle">Get started by creating your first item.</string>
     <string name="home_empty_vault_create_login">Create a login</string>
-    <string name="home_empty_vault_create_alias">Create a Hide My Email alias</string>
+    <string name="home_empty_vault_create_alias">Create a Hide-my-email alias</string>
     <string name="home_empty_vault_create_note">Create a note</string>
 
     <string
@@ -55,8 +55,8 @@
     <string name="username_copied_to_clipboard">Username copied</string>
     <string name="password_copied_to_clipboard">Password copied</string>
     <string name="credit_card_number_copied_to_clipboard">Credit card number copied</string>
-    <string name="credit_card_pin_copied_to_clipboard">Credit card pin copied</string>
-    <string name="credit_card_cvv_copied_to_clipboard">Credit card cvv copied</string>
+    <string name="credit_card_pin_copied_to_clipboard">Credit card PIN copied</string>
+    <string name="credit_card_cvv_copied_to_clipboard">Credit card CVV copied</string>
     <string name="item_too_long_copied_to_clipboard">Content was too long, partially copied to the clipboard</string>
 
     <!-- Vault drawer -->
