--- a/pass/feature-item-create/impl/src/main/res/values/strings.xml
+++ b/pass/feature-item-create/impl/src/main/res/values/strings.xml
@@ -40,16 +40,25 @@
     <string name="field_password_title">Password</string>
     <string name="field_password_hint">Add password</string>
     <string name="field_website_address_title">Website</string>
-    <string name="field_website_address_invalid">Invalid url</string>
+    <string name="field_website_address_invalid">Invalid URL</string>
     <string name="field_website_address_hint">https://</string>
     <string name="field_website_add_another">Add</string>
-    <string name="sticky_button_generate_password">Generate a new password</string>
-    <string name="sticky_button_create_alias">Hide my email</string>
-    <string name="sticky_button_use_account_email">Use %s</string>
+    <string
+        name="sticky_button_generate_password"
+        comment="Sticky button on the Create login screen. When tapped, the Generate password bottomsheet is shown"
+    >Generate a new password</string>
+    <string
+        name="sticky_button_create_alias"
+        comment="Sticky button on the Create login screen. When tapped, the Create alias bottomsheet is shown"
+    >Hide my email</string>
+    <string
+        name="sticky_button_use_account_email"
+        comment="Sticky button on the Create login screen. When tapped, the current user email is autofilled"
+    >Use %s</string>
 
     <string name="create_login_item_creation_error">Could not create Login</string>
     <string name="create_login_item_update_error">Could not update Login</string>
-    <string name="create_login_init_error">Could not initialise Login</string>
+    <string name="create_login_init_error">Could not initialize Login</string>
     <string name="create_login_invalid_totp">The 2FA contents are not valid</string>
     <string name="login_created">Login created</string>
     <string name="bottomsheet_modify_alias_title">Modify alias</string>
@@ -75,8 +84,7 @@
 
     <string name="create_note_item_creation_error">Could not create Note</string>
     <string name="create_note_item_update_error">Could not update Note</string>
-    <string name="create_note_init_error">Could not initialise Note</string>
-    <string name="create_note_empty_share_id">Share Id cannot be empty</string>
+    <string name="create_note_init_error">Could not initialize Note</string>
     <string name="note_created">Note created</string>
     <string name="edit_note_snackbar_note_moved_to_trash">Note moved to trash</string>
     <string name="edit_note_snackbar_note_moved_to_trash_error">Could not delete note</string>
@@ -99,8 +107,7 @@
     <string name="create_alias_email_not_validated_error">You cannot create aliases without first validating your email</string>
     <string name="alias_rate_limited">Too many aliases created recently</string>
     <string name="create_alias_item_update_error">Could not update Alias</string>
-    <string name="create_alias_init_error">Could not initialise Alias</string>
-    <string name="create_alias_empty_share_id">Share Id cannot be empty</string>
+    <string name="create_alias_init_error">Could not initialize Alias</string>
     <string name="alias_created">Alias created</string>
     <string name="alias_moved_to_trash">Alias moved to trash</string>
     <string name="cannot_retrieve_alias_options">Cannot retrieve alias options</string>
@@ -125,7 +132,7 @@
 
     <string name="create_credit_card_item_creation_error">Could not create credit card</string>
     <string name="create_credit_card_item_creation_success">Credit card created</string>
-    <string name="credit_card_init_error">Could not initialise credit card</string>
+    <string name="credit_card_init_error">Could not initialize credit card</string>
     <string name="credit_card_item_update_error">Could not update credit card</string>
 
     <!--  Common create items  -->
