--- a/pass/notifications/impl/src/main/res/values/strings.xml
+++ b/pass/notifications/impl/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
 <resources>
     <string name="updates_notification_channel_name">Updates</string>
     <string name="autofill_notification_channel_name">Autofill</string>
-    <string name="autofill_notification_copy_to_clipboard_title">Totp code</string>
-    <string name="autofill_notification_copy_to_clipboard_body">Totp has been copied to clipboard</string>
+    <string name="autofill_notification_copy_to_clipboard_title">TOTP code</string>
+    <string name="autofill_notification_copy_to_clipboard_body">TOTP has been copied to clipboard</string>
 
     <string name="updates_new_invite_received_title">You have received an invite</string>
     <string name="updates_new_invite_received_message">You have been invited to a vault. Open the app to see the invite and accept it.</string>
