feat(vault): update checks for "can create item in vault" in bottomsheet

--- a/pass/feature-vault/impl/src/main/res/values/strings.xml
+++ b/pass/feature-vault/impl/src/main/res/values/strings.xml
@@ -41,8 +41,9 @@
     <string name="bottomsheet_view_members">View members</string>
     <string name="bottomsheet_manage_access">Manage access</string>
 
-    <string name="bottomsheet_select_vault_read_only">You can only read</string>
+    <string name="bottomsheet_select_vault_read_only">You can only read.</string>
     <string name="bottomsheet_select_vault_not_primary_vault">You can only create items in your primary vault</string>
+    <string name="bottomsheet_select_vault_only_oldest_vaults">You can only create items in your oldest vaults.</string>
 
     <string name="vault_title">Vault</string>
 </resources>
