--- a/pass/autofill/impl/src/main/res/values/strings.xml
+++ b/pass/autofill/impl/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="topbar_search_query_uninitialized">Search…</string>
     <string name="inline_suggestions_open_app">Open Proton Pass</string>
     <string name="autofill_only_searching_in_primary_vault">Your plan only allows to use items in your primary vault for autofill purposes.</string>
+    <string name="autofill_only_searching_in_oldest_vaults">Your plan only allows to use items in your oldest vaults for autofill purposes.</string>
 
     <!-- Placeholder will contain the domain / app name we are trying to autofill -->
     <string name="autofill_suggestions_for_placeholder">Suggestions for %s</string>
