chore(sharing): copy updates

--- a/pass/feature-home/impl/src/main/res/values/strings.xml
+++ b/pass/feature-home/impl/src/main/res/values/strings.xml
@@ -33,8 +33,8 @@
     <string name="home_notification_permission_banner_text">Enable push notifications to be informed when others share a vault with you.</string>
     <string name="home_notification_permission_banner_settings">Enable permission ›</string>
 
-    <string name="home_invite_banner_title">Shared vault invitation</string>
-    <string name="home_invite_banner_subtitle">You\'ve been invited to a vault. Tap here to see the invitation.</string>
+    <string name="home_invite_banner_title">Vault shared with you</string>
+    <string name="home_invite_banner_subtitle">You\'re invited to a shared vault. Tap for details.</string>
 
     <!-- Common bottomsheet -->
     <string name="bottomsheet_copy_password">Copy password</string>
