--- a/pass/feature-sharing/impl/src/main/res/values/strings.xml
+++ b/pass/feature-sharing/impl/src/main/res/values/strings.xml
@@ -18,11 +18,11 @@
 
 <resources>
     <string name="share_continue">Continue</string>
-    <string name="sharing_can_view">Can view</string>
-    <string name="sharing_can_edit">Can edit</string>
-    <string name="sharing_can_manage">Can manage</string>
+    <string name="sharing_can_view">Viewer</string>
+    <string name="sharing_can_edit">Editor</string>
+    <string name="sharing_can_manage">Admin</string>
     <string name="sharing_can_view_description">Can view items in this vault.</string>
-    <string name="sharing_can_edit_description">Can create, edit, delete and export items in this vault.</string>
+    <string name="sharing_can_edit_description">Can create, edit, delete, and export items in this vault.</string>
     <string name="sharing_can_manage_description">Can grant and revoke access to this vault.</string>
     <plurals name="sharing_item_count">
         <item quantity="one">%d item</item>
@@ -34,14 +34,15 @@
     </plurals>
 
     <string name="share_with_title">Share with</string>
-    <string name="share_with_subtitle">This user will receive an invitation to join your \'%s\' vault.</string>
     <string name="share_with_email_hint">Email address</string>
     <string name="share_with_email_error">Invalid email address</string>
 
-    <string name="share_permissions_title">Set permissions</string>
-    <string name="share_permissions_subtitle">Select the level of access this user will gain when they join your \'%s\' vault.</string>
+    <string name="share_permissions_title">Set access level</string>
 
-    <string name="sharing_invitation_from">Invitation from %s</string>
+    <string
+        name="sharing_invitation_from"
+        comment="Text that will appear when the user accesses the details of an invite. The message appears over the vault details"
+    >%s invites you to access items in</string>
     <string name="sharing_join_shared_vault">Join and sync</string>
     <string name="sharing_reject_invitation">Reject invitation</string>
 
@@ -59,20 +60,20 @@
     <string name="sharing_snackbar_remove_member_success">Member removed from the vault</string>
     <string name="sharing_snackbar_remove_member_error">Could not remove from the vault</string>
 
-    <string name="share_summary_title">Summary</string>
+    <string name="share_summary_title">Review and share</string>
     <string name="share_summary_subtitle">You are about to invite %1$s into your %2$s. They will gain access to %3$s and they will be able to %4$s in this vault.</string>
     <string name="share_summary_vault">%s vault</string>
-    <string name="share_summary_view_items">only view items</string>
-    <string name="share_summary_create_items">create items</string>
-    <string name="share_summary_manage_vault">manage</string>
     <string name="share_summary_share_vault">Share vault</string>
-    <string name="share_summary_email_title">User</string>
+    <string name="share_summary_email_title">Share with</string>
     <string name="share_summary_vault_title">Vault</string>
-    <string name="share_summary_permissions_title">Permissions</string>
+    <string name="share_summary_permissions_title">Access level</string>
 
     <string name="share_manage_vault_share_with_more_people">Share with more people</string>
     <string name="share_manage_vault_item_count">%d items</string>
-    <string name="share_manage_vault_invite_pending">Pending invite</string>
+    <string
+        name="share_manage_vault_invite_pending"
+        comment="Text that will be shown in the vault member list, below the user email when the user has been invited but has not accepted the invitation yet"
+    >Invitation sent</string>
     <string name="share_manage_vault_current_user_indicator">You</string>
     <string name="share_role_can_view">Can view</string>
     <string name="share_role_can_edit">Can edit</string>
@@ -84,15 +85,15 @@
         name="sharing_bottomsheet_transfer_ownership_disabled_subtitle"
         comment="Appears as the subtitle of the sharing_bottomsheet_transfer_ownership when the user cannot transfer the ownership because they only own one vault"
     >You cannot transfer your last owned vault.</string>
-    <string name="sharing_bottomsheet_remove_access">Remove access</string>
+    <string name="sharing_bottomsheet_remove_access">Revoke access</string>
 
-    <string name="sharing_bottomsheet_resend_invite">Resend invite</string>
-    <string name="sharing_bottomsheet_cancel_invite">Cancel invite</string>
+    <string name="sharing_bottomsheet_resend_invite">Resend invitation</string>
+    <string name="sharing_bottomsheet_cancel_invite">Cancel invitation</string>
 
     <string name="sharing_transfer_ownership_confirm_title">Transfer ownership</string>
-    <string name="sharing_transfer_ownership_confirm_message">Are you sure you want to transfer your ownership to %s?</string>
+    <string name="sharing_transfer_ownership_confirm_message">Transfer ownership of this vault to %s?</string>
 
-    <string name="sharing_snackbar_cancel_invite_success">Invite canceled</string>
+    <string name="sharing_snackbar_cancel_invite_success">Invitation canceled</string>
     <string name="sharing_snackbar_cancel_invite_error">Error cancelling invite</string>
     <string name="sharing_snackbar_resend_invite_success">Invite resent</string>
     <string name="sharing_snackbar_resend_invite_error">Error resending invite</string>
