--- a/pass/feature-sharing/impl/src/main/res/values/strings.xml
+++ b/pass/feature-sharing/impl/src/main/res/values/strings.xml
@@ -78,6 +78,22 @@
         name="share_manage_vault_invite_pending"
         comment="Text that will be shown in the vault member list, below the user email when the user has been invited but has not accepted the invitation yet"
     >Invitation sent</string>
+    <string
+        name="share_manage_vault_invite_pending_user_creation"
+        comment="Text that will be shown in the vault member list, below the user email when the user has not created the account yet"
+    >Pending account creation</string>
+    <string
+        name="share_manage_vault_invite_confirm_access"
+        comment="Text that will be shown in the vault member list, on a button, when the invited user has created the account and we want to grant him access to the vault"
+    >Confirm access</string>
+    <string
+        name="share_manage_vault_invitations_title"
+        comment="Text that will be used as the title of the list containing the invites for a vault"
+    >Invitations</string>
+    <string
+        name="share_manage_vault_members_title"
+        comment="Text that will be used as the title of the list containing the members of a vault"
+    >Members</string>
     <string name="share_manage_vault_current_user_indicator">You</string>
     <string name="share_role_can_view">Can view</string>
     <string name="share_role_can_edit">Can edit</string>
