chore: update copy for detail errors

--- a/pass/feature-item-detail/impl/src/main/res/values/strings.xml
+++ b/pass/feature-item-detail/impl/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="action_open">Open</string>
     <string name="action_copy">Copy</string>
     <!-- Detail -->
-    <string name="detail_init_error">Could not initialize the element</string>
+    <string name="detail_init_error">Problem retrieving item details</string>
     <string name="top_bar_edit_button_text">Edit</string>
 
     <!-- Alias details -->
