--- a/pass/feature-item-create/impl/src/main/res/values/strings.xml
+++ b/pass/feature-item-create/impl/src/main/res/values/strings.xml
@@ -58,7 +58,7 @@
 
     <string name="create_login_item_creation_error">Could not create Login</string>
     <string name="create_login_item_update_error">Could not update Login</string>
-    <string name="create_login_init_error">Could not initialize Login</string>
+    <string name="create_login_init_error">Problem retrieving login details</string>
     <string name="create_login_invalid_totp">The 2FA contents are not valid</string>
     <string name="login_created">Login created</string>
     <string name="bottomsheet_modify_alias_title">Modify alias</string>
@@ -84,7 +84,7 @@
 
     <string name="create_note_item_creation_error">Could not create Note</string>
     <string name="create_note_item_update_error">Could not update Note</string>
-    <string name="create_note_init_error">Could not initialize Note</string>
+    <string name="create_note_init_error">Problem retrieving note details</string>
     <string name="note_created">Note created</string>
 
     <!-- Create Alias -->
@@ -105,7 +105,7 @@
     <string name="create_alias_email_not_validated_error">You cannot create aliases without first validating your email</string>
     <string name="alias_rate_limited">Too many aliases created recently</string>
     <string name="create_alias_item_update_error">Could not update Alias</string>
-    <string name="create_alias_init_error">Could not initialize Alias</string>
+    <string name="create_alias_init_error">Problem retrieving alias details</string>
     <string name="alias_created">Alias created</string>
     <string name="cannot_retrieve_alias_options">Cannot retrieve alias options</string>
     <string name="alias_mailbox_dialog_title">Forward to</string>
@@ -129,7 +129,7 @@
 
     <string name="create_credit_card_item_creation_error">Could not create credit card</string>
     <string name="create_credit_card_item_creation_success">Credit card created</string>
-    <string name="credit_card_init_error">Could not initialize credit card</string>
+    <string name="credit_card_init_error">Problem retrieving credit card details</string>
     <string name="credit_card_item_update_error">Could not update credit card</string>
 
     <!--  Common create items  -->
