--- a/pass/feature-sharing/impl/src/main/res/values/strings.xml
+++ b/pass/feature-sharing/impl/src/main/res/values/strings.xml
@@ -50,6 +50,19 @@
     <string name="sharing_join_shared_vault">Join and sync</string>
     <string name="sharing_reject_invitation">Reject invitation</string>
 
+    <string
+        name="sharing_invitation_access_confirmed_title"
+        comment="Title for the access confirmed bottomsheet"
+    >Congratulations, your access has been confirmed</string>
+    <string
+        name="sharing_invitation_access_confirmed_accept"
+        comment="Button that will appear in the access confirmed bottomsheet"
+    >See the shared vault</string>
+    <string
+        name="sharing_invitation_access_confirmed_close"
+        comment="Button that will appear in the access confirmed bottomsheet for closing the bottomsheet"
+    >Close</string>
+
     <string name="sharing_snackbar_get_invite_error">Could not get invite</string>
     <string name="sharing_snackbar_invite_accepted">Invite accepted</string>
     <string name="sharing_snackbar_invite_accept_error">Error accepting the invite</string>
